[workspace]
members = [
	"moz-webgpu-cts",
	"whippit",
]
resolver = "2"

[workspace.dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label", "pratt"] }
format = "0.2.4"
indexmap = "2.0.0"
insta = "1.33.0"
log = "0.4.20"
thiserror = "1.0.49"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.0.7"
rust-toolchain-version = "1.67.1"
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
