[workspace]
members = ["moz-webgpu-cts", "whippit"]
resolver = "2"

[workspace.dependencies]
env_logger = "0.11.7"
format = "0.2.4"
indexmap = "2.0.0"
insta = "1.38.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"

[workspace.package]
authors = ["`moz-webgpu-cts` authors"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
