[package]
name = "moz-webgpu-cts"
description = "Tools to work with Web Platform Tests metadata for WebGPU CTS in Firefox"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/ErichDonGubler/moz-webgpu-cts"
license = "MIT or Apache-2.0"
publish = false

[dependencies]
chumsky = { workspace = true }
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
format = { workspace = true }
indexmap = { workspace = true }
joinery = "3.1.0"
lets_find_up = "0.0.3"
log = { workspace = true }
miette = { version = "5.10.0", features = ["fancy"] }
natord = "1.0.9"
path-dsl = "0.6.1"
regex = "1.9.5"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"
wax = "0.6.0"
whippit = { version = "0.2.2", path = "../whippit", default-features = false }

[dev-dependencies]
insta = { workspace = true }
