[package]
name = "moz-webgpu-cts"
authors.workspace = true
description = "Tools to work with Web Platform Tests metadata for WebGPU CTS in Firefox"
version = "2.0.3"
edition = "2021"
repository = "https://github.com/ErichDonGubler/moz-webgpu-cts"
license = "MIT or Apache-2.0"
publish = false

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "B0A5EC85-8940-4136-ADCE-1EC3742B865C"
path-guid = "89D36C80-8B92-4C15-87A7-CCBD7A3FE6E8"
license = false
eula = false

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.11.7"
enumset = { version = "1.1.3", features = ["serde"] }
format = { workspace = true }
indexmap = { workspace = true }
itertools = "0.11.0"
joinery = "3.1.0"
lets_find_up = "0.0.3"
log = { workspace = true }
miette = { version = "5.10.0", features = ["fancy"] }
natord = "1.0.9"
path-dsl = "0.6.1"
rayon = "1.8.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = { workspace = true }
wax = { version = "0.6.0", features = ["miette"], git = "https://github.com/ErichDonGubler/wax", branch = "static-miette-diags"}
whippit = { version = "0.6.2", path = "../whippit", default-features = false, features = ["serde1"] }
enum-map = { version = "2.7.3", features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
