[package]
name = "whippit"
description = "Parsers for Web Platform Tests reports and metadata"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/ErichDonGubler/whippit"
license = "MIT or Apache-2.0"
publish = false

[features]
default = ["unstructured-properties"]
unstructured-properties = ["dep:indexmap"]

[dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label", "pratt"] }
format = { workspace = true }
indexmap = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
