[package]
name = "whippit"
authors.workspace = true
description = "Parsers for Web Platform Tests reports and metadata"
version = "0.6.2"
edition = "2021"
repository = "https://github.com/ErichDonGubler/moz-webgpu-cts"
license = "MIT or Apache-2.0"
publish = false

[features]
default = ["unstructured-properties"]
unstructured-properties = ["dep:indexmap"]
serde1 = ["dep:serde"]

[dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label", "pratt"] }
format = { workspace = true }
indexmap = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
insta = { workspace = true }
