[package]
name = "whippit"
authors.workspace = true
description = "Parsers for Web Platform Tests reports and metadata"
version = "0.6.3"
edition = "2021"
repository = "https://github.com/ErichDonGubler/moz-webgpu-cts"
license = "MIT or Apache-2.0"
publish = false

[features]
default = ["unstructured-properties"]
unstructured-properties = ["dep:indexmap"]
serde1 = ["dep:serde"]

[dependencies]
chumsky = { version = "0.10.1", features = ["pratt"] }
indexmap = { workspace = true, optional = true }
lazy_format = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
insta = { workspace = true }
